# scrapy-samsung-galaxy-store

./: .gitignore  Dockerfile  README.md  pyproject.toml  scrapy.cfg
scrapy_samsung_galaxy_store/: items.py  json_response.py  middlewares.py  settings.py
scrapy_samsung_galaxy_store/spiders/: spider.py
spider_samsung_galaxy_store/: json_response.py  middlewares.py  pipelines.py  router.py  settings.py
spider_samsung_galaxy_store/spiders/: spider.py
tests/: test_scrapy_samsung_galaxy_store.py  test_spider_samsung_galaxy_store.py
