[tool.poetry]
name = "spider-samsung-galaxy-store"
version = "0.1.0"
description = "Samsung Galaxy Store Scrapy Spider"
authors = ["Kevin Ramdath <krpent@gmail.com>"]
repository = "https://github.com/minormending/spider-samsung-galaxy-store"
readme = "README.md"
license = "MIT"
keywords = ["samsung", "galaxy", "appstore", "scrapy", "spider"]

[tool.poetry.dependencies]
python = "^3.10"
Scrapy = "^2.6.1"
pymongo = "^4.1.1"
samsung-galaxy-store = "^0.1.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"
nose2 = "^0.11.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
